# mdft-dev_general

./: .gitignore  .gitmodules  CMakeLists.txt  DMS-dimethyl-sulfide  Header.h  LICENCE  Makefile  README  README.md  REGRESSION.md  acetonitrile_6sites  benchmark.sh  ck_nonzero_nmax0_ml_luc  ck_nonzero_nmax1_ml  comparaison-lu-max-methane.agr  cs_from_luc_mmax1  cs_from_luc_mmax4  cs_luc.agr  from_ck_Luc_to_cs.f90  g_ions_ck_angular.agr  ion-g-cscdeltacd.agr  lancer.f90  methane-neutre-g-of-r__differents_mmax_L25_N32_comparaison_avec_Luc_ok.agr  methane_cs-only_q0.agr  mmax123_diverge_pour_comparaison_a_lu.agr  q0-mmax5.agr  reference_lu_brutforce-methane-direct-sum.out  reference_lu_brutforce-methane-poisson-solver.out  x.sh
benchmark/: dft.in.1
data/QM_solutes/: Cl-density3.cube  QM-K+.in  QM-acetone_10sites.in  QM-argon.in  QM-chloride.in  QM-water.in  potassium_electron_density_Gaussian.cube  test1_Ar.cube  test1_Cl.cube  test1_K_full.cube  water_electron_density_Gaussian.cube  water_electron_density_Gaussian_full.cube
data/dcf/: spce-ck_nonzero_nmax2_ml
data/dcf/acetonitrile/: acetonitrile-ck_nonzero_nmax0_ml  acetonitrile-ck_nonzero_nmax1_ml  acetonitrile-ck_nonzero_nmax2_ml  acetonitrile-ck_nonzero_nmax3_ml  acetonitrile-ck_nonzero_nmax4_ml  acetonitrile-ck_nonzero_nmax5_ml  acetonitrile-ck_nonzero_nmax6_ml  ck_acn05_2_en_mnkhi  ck_acn05_2_en_mnl
data/dcf/acn6_hnc/: acn6_hnc-ck_nonzero_nmax0_ml  acn6_hnc-ck_nonzero_nmax1_ml  acn6_hnc-ck_nonzero_nmax2_ml  (+1 more)
data/examples/: dft.in  solute.in
data/solutes/: ACE_DLPOLY.in  C153_DLPOLY.in  CH4.in  Setny flat wall 35*33 angstrom composed of 1 layers of Setny C witj modified LJ with parameter 1.25  Setny flat wall 35*33 angstrom composed of 4 layers of Setny C witj modified LJ with parameter 1.25  Setny flat wall 35*33 angstrom composed of 4 layers of Setny C witj modified LJ with parameter 2.5  _____BORDEL_A_TRIER  acetic_acid  acetone_10sites  acetone_10sites_CHELPG  acetone_10sites_GROMACS+CHELPG  acetonitrile  ammonia  benzene  bromide  butane  butane-2  chloride  chloride-2  chloride-3  chloroform  ethane  ethanol  fluorotalc  glycine  graphene_cecam_salanne_juil2016  hardsphere  hexane  krypton  methane - moller 1992  methane-moller-1992  methanol  methylamine  n-methylacetamide  neon  neopentane_unifiedatom  pentane  potassium+  propane  propanone  (+10 more)
doc/: energy_nn_cs.lyx  euler-angles-of-MDFT.nb  manual.lyx  pdesolver.lyx
input/: alcanes.in  bla_dft_forsetny.in  cs.in  dft.in  dft.in.bak  reference-dft.in  reference-solvent.in  solute.in  solvent.in
input/solute/: +1 charge solute for debugging poisson solver  ACETIC    ACID    Jorgensen  Acetonitrile  Ammonia  BENZENE    chipot  Butane from Roux Data using Charmm parameters  CH4 Guillot Guissani  CH4 asthagiri merchant pratt  Cl0 shuangliang partial q__2  Ethane, Jorgensen et al., J. Phys. Chem. 94, 1683-1868 (1990)  METHANETHIOL  METHYL    ACETATE    Jorgensen  Neutral solute with large radius for purely repulsive potential  PYRAZINE  PYRIDINE  Pyrophillite charge entiere, reduced size from 1280 atoms to 320 by symetry, for tests   Pyrophillite, as small a supercell can be while being orthorhombique, as given by Virginie Marry, 2012 dec 8 Lx=,Ly=,Lz=  Pyrophyllite_from_Virginie_Marry_20131230_1280atoms  Xe, Guillot and Guissani, J. Chem. Phys. 99 (10), 8075 (1993)  acetamide  acetic_acid  acetone  acetonitrile  arginine Fabio  argon  benzene  butane  chlorine  chloroform  dna-hard-spheres  ethane  ethanol-2  hexane  iodide  krypton  lysosyme_massimo-marchi_june2016  methane  neon  pentane  polyacrylamide_elsa_perrin_16-6-6  (+11 more)
luc-files/: accum_h2o_mnmunukhi_demo_lu....f90  ck_nmax1  ck_nmax2  ck_nmax3  ck_nmax4  ck_nmax5  ck_toutes_nmax1  ck_toutes_nmax2
manual/: FMT.nb  aller-retour__projeter_une_fonction_sur_harmspherique.nb  dft.in.lyx  direct_correlation_function_PY_Wertheim.nb  electrostatics.lyx  external_potentials.lyx  hard-spheres.lyx  polarization.lyx
src/: NEW_energy_nn_cs.f90  Vcoul_from_solvent_charge_density.f90  adhoc_corrections_to_gsolv.f90  allocate_from_input.f90  bfgs.f90  chargeDensityAndMolecularPolarizationOfASolventMoleculeAtOrigin.f90  charge_density_from_point_charge_positions.f90  check_solute_linearity.f90  check_solute_planarity.f90  close_simu.f90  compute_angular_grid.f90  compute_angular_grid_leb.f90  compute_g-r-theta.f90  compute_gofrandcostheta.f90  compute_hard_spheres_parameters.f90  compute_planar_density.f90  compute_purely_repulsive_potential.f90  compute_rdf.f90  compute_vcoul_as_sum_of_pointcharges.f90  compute_vcoul_ijko_from_tabulated.f90  compute_vext_hard_cylinder.f90  compute_vext_hard_sphere.f90  compute_vext_perso.f90  compute_vlj_ijko_from_tabulated.f90  compute_wca_diameter.f90  compute_z_density.f90  convert_coordinate_into_icg.f90  cs_from_dcf.f90  cs_of_k_hard_sphere.f90  cs_plus_hydro.f90  dblas1.f90  density_mod.f90  electrostatic_potential_from_charge_density.f90  energy_and_gradient.f90  energy_ck_angular.f90  energy_ck_en_harm_sph_DB.f90  energy_cs.f90  energy_cs_hard_sphere.f90  energy_external.f90  energy_fmt.f90  (+136 more)
src/useless_for_now/: Vcoul_from_solvent_charge_density.f90  cgp_cgfam.f  cgp_main.f  compute_3body_term.f90  energy_hydro_chandler_HSB.f90  energy_ideal_old.f90  energy_polarization_from_charge_density.f90  ext_hard_core.f90  get_Psi_integration_roots_and_weights.f90  get_charge_density_k_trilin.f90  module_energy_cproj.f90  module_threebody.f90  output_g-r-costheta.f90  read_ck.f90  tabulate_normk_and_k2.f90  trilinear_interpolation_v.f90
tools/: brideDensityCube.py  concatanateTwoSolute.py  functionInType.f90  getOptimumBox.py  graphene_generator.f90  hankel-transform-of-LJ-pot.nb  mdft.dot  pdb2density.f90  test_function_harm_sph_de_luc.f90
tools/jube/: .gitignore  README  create_tex.py  darshanparser.py  eocoe_jube.xml  extract_metrics.py  mdft.xml  mdft_PerfEval.xml  mdft_input_parameters.xml  mdft_jube_include.xml  mdft_workshop.xml  scalasca_in.xml  shuffle_json.py
tools/projections/: ThreeJSymbol.nb  invariants_rotationnels_phi_mnl_mu_nu.nb  text.lyx
tools/taskgen/: x.sh
(+901 files in other folders)
